human_written_tests/WebAssembly/processed_control_flow_validation/test_return_13.wast
(assert_invalid
  (module
    (func $type-value-empty-vs-num-in-local.set (result i32)
      (local i32)
      (local.set 0 (return)) (local.get 0)
    )
  )
  "type mismatch"
)